# med-bot

./: .gitignore  README.md  config.py  llm.py  main.py  pyproject.toml
crawler/: link_parser.py  page_parser.py  prices_parser.py  run.py
handlers/: __init__.py  messages.py  start.py  stats.py
services/: evidence_service.py  history_service.py  llm_service.py  rag_service.py  sheets_service.py  token_tracker.py  tools.py  validation.py
