[project]
name = "med-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.25.0",
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.2",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "ollama>=0.6.1",
    "openai>=2.24.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
]
